# llm_rag_tutorial

llm_rag_tutorials/: .gitignore  main.py  pyproject.toml
llm_rag_tutorials/chat_pdf/: front.py  main.py
llm_rag_tutorials/chat_pdf/data/: 운수 좋은 날.txt  현진건-운수_좋은_날+B3356-개벽.hwp
llm_rag_tutorials/fashion_rag/: fashion_rag.py  settings.txt
llm_rag_tutorials/hybrid_rag_serach/: hybrid_rag_01.py  hybrid_rag_02.py  hybrid_rag_03.py
llm_rag_tutorials/langchain_agent/: agent.py
llm_rag_tutorials/multi_chain/: icel.py  sequential_chain.py
llm_rag_tutorials/multi_modal/: multi_modal_01.py  multi_modal_02.py  multi_modal_03.py  settings.txt
llm_rag_tutorials/multiquery_rag/: rag_from_web.py  unique_union.py
llm_rag_tutorials/similarity/: simil_01.py  simil_02.py  simil_03.py
llm_rag_tutorials/similarity/restaurant-faiss/: index.faiss  index.pkl
llm_rag_tutorials/similarity/restaurant_faiss/: index.pkl
