[project]
name = "llm-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "datasets>=4.8.5",
    "faiss-cpu>=1.13.2",
    "ipython>=9.13.0",
    "langchain>=1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.2.1",
    "open-clip-torch>=3.3.0",
    "openai>=2.37.0",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "unstructured-inference>=1.6.11",
    "unstructured[all-docs]>=0.22.29",
]
